    them.

  Default value is =used-only=.
- New variable =dotspacemacs-emacs-command-key= which replaces the variable
  =dotspacemacs-command-key=. This variable represents the key to press after
  the leader key to execute =M-x=. Default value is ~SPC~.
- New variable =dotspacemacs-folding-method= to allow choosing between
  different code folding methods. Currently supported are =evil= and =origami=.
  Default value is =evil=. (thanks to ralesi)
- New variable =dotspacemacs-ex-substitute-global=, if non-nil then
  the behavior of the =g= flag in =:substitute= ex-command is inverted.
  Default value is nil (thanks to fbergroth)
- New variable =dotspacemacs-smart-closing-parenthesis=. If non-nil pressing
  the closing parenthesis ~)~ key in insert mode passes over any automatically
  added closing parenthesis, bracket, quote, etc...
  This can be temporary disabled by pressing ~C-q~ before ~)~. Default is nil.
  (thanks to StreakyCobra)
- New variable =dotspacemacs-retain-visual-mode-on-shift=, If non nil ~>~ is
  remapped to ~>gv~ and ~<~ is remapped to ~<gv~ in visual mode, default
  value is nil (thanks to Stebalien)
- New variable =dotspacemacs-visual-line-move-text=, if non-nil, ~J~ and ~K~
  move lines up and down when in visual mode. Default value is nil.
  (thanks to Stebalien)
- New variable =dotspacemacs-helm-use-fuzzy=. It controls fuzzy matching in
  helm. If set to =always=, force fuzzy matching in all non-asynchronous
  sources. If set to =source=, preserve individual source settings. Else,
  disable fuzzy matching in all sources. Default value is =always=
  (thanks to quicknir)
- New variable =dotspacemacs-elpa-subdirectory=. Can be =nil= or a form that
  evaluates to a package directory. For example, to use different package
  directories for different Emacs versions, set this to =emacs-version=
  (thanks to bmag, TheBB and emacs18)
- New variable =dotspacemacs-startup-buffer-responsive= to enable the